--- a/e_commerce/mainapp/templates/base.html
+++ b/e_commerce/mainapp/templates/base.html
@@ -49,7 +49,7 @@
 
 		<!-- Brand -->
 		<a class="navbar-brand waves-effect" href="/">
-			<strong class="red-text">DJe-commerce</strong>
+			<strong class="red-text">the white shop</strong>
 		</a>
 
 		<!-- Collapse -->
